Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24443

QtCreator/CMake does not recognize an updated compiler (Windows/MSVC)

    XMLWordPrintable

Details

    • Windows
    • 2d8cd0c90c50c4dbb490dd9e851d243ba3c26422 (qt-creator/qt-creator/5.0)

    Description

      When updating msvc to the latest 16.7 QtCreator needs to update the location of the compiler. For the user this means usually Kits > Compiler > Remove All  > Re detect > select compiler for my Kit. This behavior is understandable. But when opening a (cmake) project that used the old compiler path before I get the compiler path missing error:

      C++ Indexer: Skipping file "D:/Backup/Code/Qt/build-ScreenPlayInternal-ScreenPlay_Qt_5_15_0_MSVC2019_64bit-Debug/ScreenPlay/ScreenPlay/ScreenPlay_autogen/EWIEGA46WW/qrc_Resources.cpp" because it is too big.
      Running C:\Program Files\CMake\bin\cmake.exe -S D:/Backup/Code/Qt/ScreenPlayInternal -B D:/Backup/Code/Qt/build-ScreenPlayInternal-ScreenPlay_Qt_5_15_0_MSVC2019_64bit-Debug in D:\Backup\Code\Qt\build-ScreenPlayInternal-ScreenPlay_Qt_5_15_0_MSVC2019_64bit-Debug.
      -- VCPKG-Info: CMAKE_MAP_IMPORTED_CONFIG_MINSIZEREL set to MinSizeRel;Release;
      -- VCPKG-Info: CMAKE_MAP_IMPORTED_CONFIG_RELWITHDEBINFO set to RelWithDebInfo;Release;
      -- The CXX compiler identification is unknown
      CMake Error at CMakeLists.txt:8 (project):
       The CMAKE_CXX_COMPILER:
      C:/Program Files (x86)/Microsoft Visual Studio/2019/Community/VC/Tools/MSVC/14.26.28801/bin/HostX64/x64/cl.exe
      is not a full path to an existing compiler tool.
      Tell CMake where to find the compiler by setting either the environment
       variable "CXX" or the CMake cache entry CMAKE_CXX_COMPILER to the full path
       to the compiler, or to the compiler name if it is in the PATH.
      

      The only way to fix this was to completely remove the build folder. This is especially annoying since we cannot easily change the build path since 4.13. https://bugreports.qt.io/browse/QTCREATORBUG-24410

       

      Attachments

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-24443
          # Subject Branch Project Status CR V

          Activity

            People

              cadam Cristian Adam
              kelteseth Elias Steurer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes